--- a/final/theory.tex
+++ b/final/theory.tex
@@ -1454,7 +1454,7 @@ Note that this walk guarantees that each vertex is visited at least once.
 When such a tree is applied to the problem of exhaustively finding the chromatic number of a graph via a sequence
 of vertex contraction and edge addition choices, the tree is called a \emph{Zykov} tree and the algorithm is called
 a \emph{Zykov} algorithm~\cite{mcdiarmid}.  Zykov algorithms are described in detail in
-\sectionname~\ref{sec:chromatic}.  In fact, the proposed algorithm is a variation of the standard Zykov algorithm.
+\sectionname~\ref{sec:sub:zykov}.  In fact, the proposed algorithm is a variation of the standard Zykov algorithm.
 
 \subsection{The Adjacency Matrix}\label{sec:sub:adjacency}
 
