--- a/final/problems.tex
+++ b/final/problems.tex
@@ -65,7 +65,7 @@ then be:
 For the types of algorithms examined in this research, a typical value for \(c\) would be no more than \(3\) and a
 typical value for \(a\) would be no more than \(1\).  \tablename~\ref{tab:grow} lists results for various values of
 \(n\).  Note that for higher values of \(n\) the effect of the polynomial time steps diminishes; however, for low
-to moderate values of \(n\) the effect is significant.  To put it bluntly, AD designers don't care a hoot about the
+to moderate values of \(n\) the effect is significant.  To put it bluntly, AD designers don't give a hoot about the
 runtime complexity at large \(n\); they only care about how long it takes to get an answer for values of \(n\) in
 the stated range of the tool.  Therefore, for the selected range of about \(20\) FRs, the effects of these steps
 can be significant.
@@ -381,7 +381,7 @@ bounding conditions interact such that it is unclear what constitutes a worst ca
 previous maximal clique example, it is clear that the worst case has an upper bound of \(\BO(2^n)\); however, this
 bound is not very tight.  In these cases, runtime complexity values gleaned from empirical data are convenient
 substitutes for truly theoretical answers.  In fact, it will be shown in \sectionname~\ref{sec:chromatic} using
-empirical data that the actual runtime complexity of this maximal clique algorithm is less than \(\BO(1.3^n)\).
+empirical data that the actual runtime complexity of this maximal clique algorithm is about \(\BO(1.25^n)\).
 
 Furthermore, runtime complexities for exponential algorithms tend to address large \(n\) cases where the
 exponential nature of the whole algorithm far exceeds the effect of any P-time steps.  As was shown in
